--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,25 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&family=Stint+Ultra+Condensed&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+font-family: 'KoHo', sans-serif;
+color: #333;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-h2, h3, h4 {
+.App{
   text-align:center;
+  margin-top:20px;
+}
+.Header{
+  padding: 20px;
+  display: inline-grid;
+  align-items: center;
+  max-width: 900px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.home-content{
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
 }
